Added icon fonts from icomoon

--- a/sass/_reset.scss
+++ b/sass/_reset.scss
@@ -11,3 +11,7 @@ input::-webkit-outer-spin-button, input::-webkit-inner-spin-button {
 h1 {
   font-size: 1.5em;
 }
+
+body {
+  margin-bottom: 0;
+}
