--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,6 +3,9 @@
 @import "neat/neat";
 
 @import "variables";
+@import "mixins";
 @import "reset";
+@import "fonts";
+@import "button_group";
 @import "app";
 
