--- a/sass/_app.scss
+++ b/sass/_app.scss
@@ -60,6 +60,39 @@ section {
   background-color: $light-red;
 }
 
+.button-group {
+  /*position: absolute;
+  bottom: 0;
+  width: calc(100% - 1em);*/
+  
+  height: 3em;
+  
+  //margin: 0;
+  //margin-top: 2em;
+  //padding: 0;
+  
+  @include display(flex);
+  @include align-items(stretch);
+  @include flex-direction(row);
+  @include justify-content(flex-start);
+  
+  button {
+    padding-bottom: 1em;
+    padding-top: 1em;
+    //margin: 0; 
+    
+    @include flex(1);
+    
+    &.active {
+      //padding: 1em;
+      //padding: 1em auto;
+      padding-bottom: 1em;
+      padding-top: 1em;
+    }
+  }
+}
+
+
 @media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
   button {
     padding: 0.75em;
