--- a/sass/_app.scss
+++ b/sass/_app.scss
@@ -34,13 +34,13 @@ section {
 
 .message {
   position: fixed;
-  top: calc(50% - 1.5em);
+  top: calc(50% - 1em);
   left: 25%;
 
   width: 50%;
-  min-height: 3em;
+  min-height: 2em;
   background-color: $light-green;
-  font-size: 2em;
+  font-size: 1.2em;
 
   @include border-top-radius(5px);
   @include border-bottom-radius(5px);
@@ -94,8 +94,20 @@ section {
 }
 
 .add-to-home-screen {
-  width: 70px;
-  height: 42px;
+  height: 1.2em;
+  vertical-align: sub;
+}
+
+.install-instructions {
+  display: none;
+
+  &#default {
+    display: block;
+  }
+
+  &#firefox-os {
+    text-align: center;
+  }
 }
 
 @media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
